# foreign-trade-assistant

./: .claude.md  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  LICENSE  README.md  SECURITY.md  Trade-Hermes耦合评估.md  Trade-Hermes解耦可行性.md  Trade数据目录结构设计.md  pre_install_check.py  pyinstaller.spec  pyproject.toml  requirements.txt  server.py  业务概览.md  代码复用评估.md  使用说明书.md  外贸业务方法总结.md  外贸业务知识库.md  文件类型处理方法整理.md  项目需求文档.md
.github/workflows/: test.yml
.trade-template/: config.yaml
.trade-template/companies/company-slug/: agent-identity.md  business-scope.md  certifications.md  company-profile.md  competitors.md  marketing-strategy.md  products.md  sales-playbook.md
.trade-template/companies/company-slug/clients/client-slug/: contacts.md  interactions.md  notes.md  orders.md  profile.md  quotes.md  requirements.md
.trade-template/companies/company-slug/libraries/library-slug/: changelog.md  index.md  metadata.md
.trade-template/prompts/: system.md  trade-system-prompt.md
.trade-template/skills/b2b-document/: SKILL.md
docs/: architecture.drawio
docs/superpowers/plans/: 2026-05-16-bug-fixes.md
scripts/: build.ps1  build.sh  com.foreign-trade.gateway.plist  install.ps1  install.sh  install_prereqs.ps1  install_prereqs.sh
skills/b2b-customer-mgmt/: SKILL.md
skills/b2b-customs-data/: SKILL.md
skills/b2b-daily-automation/: SKILL.md
skills/b2b-data-directory/: SKILL.md
skills/b2b-doc-generation/: SKILL.md
skills/b2b-document/: SKILL.md
skills/b2b-email-intel/: SKILL.md
skills/b2b-lead-generation/: SKILL.md
skills/b2b-linkedin-marketing/: SKILL.md
skills/b2b-onboarding/: SKILL.md
skills/b2b-osint/: SKILL.md
skills/b2b-platform/: SKILL.md
skills/b2b-social-media/: SKILL.md
skills/chat-memory/: SKILL.md
static/: trade_chat.html
tests/: conftest.py  test_api.py  test_business.py  test_chat_smoke.py  test_database.py  test_osint.py
trade/: __init__.py  api.py  chat_memory.py  company.py  customer.py  database.py  email_intel.py  helpers.py  library.py  license.py  memory.py  onboarding.py  osint.py  post_install.py  prompt.py  prompts.py  skill_registry.py  skill_router.py
trade/api/: __init__.py  chat.py  companies.py  conversations.py  cron.py  customers.py  deps.py  libraries.py  license.py  memory.py  models.py  onboarding.py
trade/osint/: __init__.py  constants.py  email_verify.py  linkedin_verify.py  orchestrator.py  sanctions.py  scoring.py  tech_stack.py  whois.py
