[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foreign-trade-assistant"
version = "0.3.0"
description = "Foreign Trade Assistant — AI sales assistant for B2B trade companies. Lead generation, customer due diligence, document analysis, social media, and daily automation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Roger Lau" }]
license = { text = "MIT" }
dependencies = [
  # Core
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "python-multipart>=0.0.9",
  # Explicit — needed for SKILL.md frontmatter parsing and version checks
  "pyyaml>=6.0",
  "packaging>=23.0",
  # Hermes Agent — AI engine, tools, memory, skills.
  # MUST be installed from chefroger/hermes-agent fork (the only supported source).
  # Pin to exact git tag for deterministic installs.
  "hermes-agent @ git+https://github.com/chefroger/hermes-agent.git@v0.13.0",
  # Or for dev: "hermes-agent @ git+https://github.com/chefroger/hermes-agent.git@main",
  # Document extraction (used by read_file tool in Hermes)
  "pymupdf>=1.24.0",
  "openpyxl>=3.1.0",
  "python-docx>=1.1.0",
  "python-pptx>=1.0.0",
  "xlrd>=2.0.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "coverage[toml]>=7.4.0",
]

[project.scripts]
trade = "server:main"
# Installs Trade skills into Hermes at package install time.
# Copies skills/b2b-* to ~/.hermes/skills/b2b/ so Hermes can discover them.
install-trade-skills = "trade.post_install:install_skills"

[tool.setuptools.packages.find]
include = ["trade", "trade.*"]

# Include skills as package data so post_install can read them
[tool.setuptools.package-data]
trade = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "N"]
ignore = ["E501", "E402", "B904", "N806", "E741", "F601"]  # pragmatic: non-blocking lint rules

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-export 场景允许
"tests/*.py" = ["N802", "N803"]  # 测试函数名允许大写开头
